--- a/_posts/2021-07-21-tor和vpn.md
+++ b/_posts/2021-07-21-tor和vpn.md
@@ -1,4 +1,13 @@
-# 如题tor和vpn
+---
+layout: post
+title: "tor和vpn"
+date:   2021-07-21
+tags: [知识]
+comments: true
+author: crazyhan
+---
+
+## 如题tor和vpn
 
 （[突然想说vpn全称是什么？](https://www.notion.so/vpn-e52c75f756264840a61f90b73f21925e) ）
 
